src/test/ui/issues/issue-23302-2.stderr
error[E0391]: cycle detected when promoting and checking `Y::A::{{constant}}#0`
  --> $DIR/issue-23302-2.rs:4:9
   |
LL |     A = Y::B as isize,
   |         ^^^^^^^^^^^^^
   |
note: ...which requires computing qualifs for `Y::A::{{constant}}#0`...
  --> $DIR/issue-23302-2.rs:4:9
   |
LL |     A = Y::B as isize,
   |         ^^^^^^^^^^^^^
   = note: ...which again requires promoting and checking `Y::A::{{constant}}#0`, completing the cycle
note: cycle used when processing `Y::A::{{constant}}#0`
  --> $DIR/issue-23302-2.rs:4:9
   |
LL |     A = Y::B as isize,
   |         ^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0391`.
